--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Work With QR code</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_to_qr_generator">Text to QR Generator</string>
+    <string name="generate">GENERATE</string>
+    <string name="save">SAVE</string>
 </resources>
